# snippets

./: .gitmodules  average_queue.py  polygon_filter.py  wrench_control.py
arduino/spx14587/: plot_pressure.ino  plot_prox.ino  touch_detection.ino
asm/: cheat.md  study.md
asm/instr_benchmark/: asmgen.py  main.cpp
asm/memory_addressing/: action.sh  main.cpp  memory.s
asm/memory_benchmark/: .gitignore  action.sh  asmgen.py  main.cpp
asm/register_spill_using_xmm_hack/: action.sh  codegen.py  main.cpp
binary/jit_computational_graph/: .gitignore  action.sh  main.cpp  run.sh
binary/runtime_machine_code_embed/: main.cpp
binary/xbyak/: example.cpp
blender/: READMDE.md
book/: hofstadter_gdb.txt  pfeifer_知能の原理.txt  shalev-shwartz_understanding_marchin_learning.md  suzuki_なめらかな社会とその敵.txt
code_reading/: bullet3.md
code_reading/bullet/: bullet3.md
computer_science_general/: covariance_vs_contravariant.md  frame_problem.md
contexts/: plainmp.md  skrobot.md
cooking/: cauliflower_curry.md  grilled_cheeze.md  indian_curry.md  maitake_curry.md  original_energy_drink.md  tomato_carbonara.md
cpp/: compare_vector_access.cpp  custom_hash.cpp  move_in_constructor.cpp  regex.cpp  static.cpp  upcast.cpp
cpp/autoware/perf_distance/: CMakeLists.txt  action.sh  main.cpp
cpp/autoware/reedsshepp/: CMakeLists.txt  compare_backtrace.py  main.cpp  main.py
cpp/capi/: CMakeLists.txt  mylib.h  test.c  wrapper.cpp  wrapper.h
cpp/cmake/: README.md
cpp/const/: sample.cpp
cpp/debug_howto/: README.md
cpp/debugging/: undefined_reference_aru_aru.md
cpp/eigen/: eigen_access_slow.cpp  eigen_block_util.cpp  ptr_to_eigen.cpp  sample.cpp
cpp/ext_example/eigen/perf_3dtransform/: CMakeLists.txt  action.sh  just_matmul.cpp  main.cpp  random_access.cpp  urdf_pose.hpp
cpp/ext_example/fcl/: .gitignore  CMakeLists.txt  action.sh  main.cpp
cpp/ext_example/ompl/: CMakeLists.txt  README.md  action.sh  compare_leads_sheep.cpp  constrained.cpp  lightning.cpp  planning_tutorial.cpp
cpp/ext_example/ompl/custom_constrained_planner/: action.sh  constrained.cpp  main.py
cpp/ext_example/ompl/read_code_constrained/: main.cpp
cpp/implementation_split/: CMakeLists.txt  a.cpp  b.cpp  (+3 more)
cpp/webgl/: .gitignore  CMakeLists.txt  README.md  example.cpp
cpp/webgl/crossguid/: guid.cpp
docker/: Dockerfile  README.md  docker-compose.yaml
euslisp/: exception.l  file_io.l  json-av.l  json.l  multi-thread.l  muroka_control.l  pose_to_coords.l  pr2ik.l  random_av_dataset.l  tips.l  tutorial_ja.l
euslisp/pycall/: CMakeLists.txt  test.l  wrapper.cpp
gui_tools/: inkscape.md
julia/: README.md  banded_matrix.jl  binary_tree.jl  call_lapack.jl  channel.jl  channel_lazy.jl  forward_diff.jl  generator_python_link.jl  ipopt_hessian_approx.jl  julia_tips.md  meshcat.jl  outer_product.jl  outerproduct.jl  parametric_composite.jl  parametric_function.jl  parametric_type.jl  pickle.jl  priority_queue.jl  progressive_grid.jl  qp.jl  region_tree_sample.jl  sdf.jl  static_arrays.jl  svm_contourf.jl  transform.jl
julia/ros/sample/: CMakeLists.txt  package.xml
julia/ros/sample/srv/: SimpleString.srv  TweakedSetBool.srv
julia/ros/sample/test_custom_empty/: client.py  server.jl
julia/ros/sample/test_custom_setbool/: client.py  server.jl
julia/ros/sample/test_simple_string/: client.py  server.jl
julia/ros/sample/test_std/: client.py  server.jl
julia/ros/sample/test_tweaked_setbool/: client.py  server.jl
latex/: highlight_math.py
launch_files/: color_filter.launch  euclidean.launch  reproduce_pc.launch
linux/: pdf_grayscale.sh
linux_tools/: glibcxx.md  ssh_stuff.md  strace.md
linux_tools/socat_serial_emulation/: .gitignore  CMakeLists.txt  README.md  action.sh  linux_side.cpp  stm_side.c
math/: chentsov.py  frobenius.py  submodular.md
paper/: 2014_dai_centroidal_dynamics_with_full_kinematics.md  2017_chakraborti_plan-explanations-as-model-reconcilation.md  2023_diffusion_policy_chi-etal.md  2024_octo_generalist_robot_policy.md  survey_legged_motion_planning.md
pcl_convert/: converter.cpp  pcltoros.cpp
pcl_eus/: make_pc.lsp  vase.csv  vase_pc_publisher.py
physics/: inertial_tensor.py
python/: callstack.py  closure_2x.py  format.py  functions.py  interp_contour.py  logger.py  lru_cache_bench.py  lru_cache_with_class.py  multiple_constructer.py  randomball.py  reshape.py  spline.py  sslm.py  stacktrace.py  svdd.py  tax.py  tips.md  yamler.py
python/ext_examples/pybind/findpython/: .gitignore  CMakeLists.txt
ros/: .rosinstall  README.md  client.py  cluster_point_indices_to_points.py  ekf.launch  image_8uc1_grayscale.py  mannequin.py  movebase.l  teaching.py  upstart.md
ros/costmap_query/: CMakeLists.txt  package.xml
ros/costmap_query/costmap_query/: package.xml
ros/costmap_query/srv/: ComputeCost.srv
ros/cpp_bagread/: .gitignore  CMakeLists.txt  main.cpp  package.xml
ros/cpp_msg_dump/: .gitignore  CMakeLists.txt  main.cpp  package.xml
ros/example_catkin_python_setup/: CMakeLists.txt  README.md  example.py  package.xml
ros/example_catkin_python_setup/python/example_catkin_python_setup/: module2.py
ros/gazebo/sim3_lecture/: CMakeLists.txt  package.xml
ros/gazebo/sim3_lecture/gazebo/models/dummy_room/: model.sdf  table.stl
ros/gazebo/sim3_lecture/gazebo/worlds/: world_simulation.world
ros/gazebo/sim3_lecture/launch/: base_world.launch
ros/simple_rostest/: .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  package.xml
ros/simple_rostest/src/: add_two_ints_service.cpp
ros/simple_rostest/test/: add_two_ints_service_client.cpp  add_two_ints_service_client.launch
ros/string_service/: CMakeLists.txt  package.xml
ros/string_service/example/: eus_server.l  py_client.py
ros/tf/cpp_tf_example/: CMakeLists.txt  action.sh  main.cpp  package.xml
ros/tf/cpp_tf_example/.cache/clangd/index/: main.cpp.52C71A45CA9993E3.idx
ros2/: ament.md  colcon_tips.md  typical_bugs.md
ros2/server_client/cpp/sample/: CMakeLists.txt  action.sh  client.cpp  package.xml  server.cpp  serverclient.cpp
shell/: make_gif.sh
svm_region_tree/: test.jl
tools/: setup_cpp  setupcpp
(+1257 files in other folders)
