<?xml version="1.0"?>
<package format="2">
  <name>costmap_query</name>
  <version>0.0.0</version>
  <description>The costmap_query package</description>
  <maintainer email="hiro@todo.todo">hiro</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_export_depend>message_generation</build_export_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>
