<?xml version="1.0"?>
<package format="2">
  <name>example_catkin_python_setup</name>
  <version>0.0.0</version>
  <description>The example_catkin_python_setup package</description>

  <maintainer email="h-ishida@todo.todo">h-ishida</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
