<?xml version="1.0"?>
<package format="2">
  <name>simple_rostest</name>
  <version>0.0.0</version>
  <description>Automated tests</description>

  <author>Victor Lamoine - Institut Maupertuis</author>
  <maintainer email="victor.lamoine@gmail.com">Victor Lamoine</maintainer>
  <license>BSD-3-Clause-Attribution</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <test_depend>rostest</test_depend>
</package>

