<?xml version="1.0"?>
<package format="2">
  <name>sample</name>
  <version>0.0.0</version>
  <description>The sample package</description>
  <maintainer email="h-ishida@todo.todo">h-ishida</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

</package>
